--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/homekeeper?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/homekeeper?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 1234567890
 
