--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 			<version>2.3.6.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.16</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!--
 		<dependency>
 		<groupId>org.flywaydb</groupId>
