--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,12 @@
 	</properties>
 
 	<dependencies>
-		<!-- Security -->
+		<!-- Security
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		-->
 
 		<!-- Web -->
 		<dependency>
@@ -51,6 +52,13 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>2.3.6.RELEASE</version>
 		</dependency>
+		<!-- -->
+		<dependency>
+		<groupId>org.flywaydb</groupId>
+		<artifactId>flyway-core</artifactId>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -58,13 +66,6 @@
 			<version>1.18.16</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!--
-		<dependency>
-		<groupId>org.flywaydb</groupId>
-        <artifactId>flyway-core</artifactId>
-        </dependency>
-        -->
 
 		<!-- DevTools -->
 		<dependency>
