--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/homekeeper?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = 1234567890
-
+spring.datasource.password = ${dbSecret}
+spring.jpa.generate-ddl = false
+spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+
+#spring.main.allow-bean-definition-overriding = true # use old google property
+#security.oauth2.client.clientId = 235455713239-gsfitturkangkseqjpfg5cese4atlket.apps.googleusercontent.com
+#security.oauth2.client.clientSecret = ${clientSecret}
+#security.oauth2.client.accessTokenUri = https://www.googleapis.com/oauth2/v4/token
+#security.oauth2.client.userAuthorizationUri = https://accounts.google.com/o/oauth2/v2/auth
+#security.oauth2.client.clientAuthenticationScheme = form
+#security.oauth2.client.scope = openid,email,profile
+#security.oauth2.resource.userInfoUri = https://www.googleapis.com/oauth2/v3/userinfo
+#security.oauth2.resource.preferTokenInfo = true
