--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,11 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>2.3.6.RELEASE</version>
 		</dependency>
-		<!-- -->
+		<!--
 		<dependency>
 		<groupId>org.flywaydb</groupId>
 		<artifactId>flyway-core</artifactId>
-		</dependency>
+		</dependency>-->
 
 
 
