--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 
+# App Properties
+homekeeper.app.jwtSecret= ${dbSecret}
+homekeeper.app.jwtExpirationMs= 86400000
+
 #spring.main.allow-bean-definition-overriding = true # use old google property
 #security.oauth2.client.clientId = 235455713239-gsfitturkangkseqjpfg5cese4atlket.apps.googleusercontent.com
 #security.oauth2.client.clientSecret = ${clientSecret}
