--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,18 @@
 	</properties>
 
 	<dependencies>
-		<!-- Security
+		<!-- Security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		-->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+
 
 		<!-- Web -->
 		<dependency>
@@ -52,6 +58,12 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>2.3.6.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
 		<!--
 		<dependency>
 		<groupId>org.flywaydb</groupId>
