--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/homekeeper?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = ${dbSecret}
-spring.jpa.generate-ddl = true
-spring.jpa.show-sql = true
+spring.jpa.generate-ddl = false
+spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 
 # App Properties
