--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/homekeeper?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username = root
+spring.datasource.username = user
 spring.datasource.password = ${dbSecret}
 spring.jpa.generate-ddl = false
 spring.jpa.show-sql = false
