--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 homekeeper.app.jwtSecret= ${dbSecret}
 homekeeper.app.jwtExpirationMs= 86400000
 
+homekeeper.app.secretKey= ${secretKey}
+
 #spring.main.allow-bean-definition-overriding = true # use old google property
 #security.oauth2.client.clientId = 235455713239-gsfitturkangkseqjpfg5cese4atlket.apps.googleusercontent.com
 #security.oauth2.client.clientSecret = ${clientSecret}
