--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/homekeeper?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username = user
-spring.datasource.password = ${dbSecret}
-spring.jpa.generate-ddl = false
-spring.jpa.show-sql = false
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = validate
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+spring.datasource.url=jdbc:postgresql://localhost:5432/homekeeper
+spring.datasource.username=hkuser
+spring.datasource.password=${dbSecret}
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+# spring.datasource.driver-class-name=com.postgresql.jdbc.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # App Properties
 homekeeper.app.jwtSecret= ${dbSecret}
 homekeeper.app.jwtExpirationMs= 86400000
-
-homekeeper.app.secretKey= ${secretKey}
+homekeeper.app.secretKey=${secretKey}
+homekeeper.app.remoteAddr=${remoteAddr}
 
 #spring.main.allow-bean-definition-overriding = true # use old google property
 #security.oauth2.client.clientId = 235455713239-gsfitturkangkseqjpfg5cese4atlket.apps.googleusercontent.com
