--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # App Properties
 homekeeper.app.jwtSecret= ${dbSecret}
-homekeeper.app.jwtExpirationMs= 86400000
+homekeeper.app.jwtExpirationMs= 172800000
+# homekeeper.app.jwtExpirationMs= 86400000
 homekeeper.app.secretKey=${secretKey}
 homekeeper.app.remoteAddr=${remoteAddr}
 
