--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/homekeepertest
 spring.datasource.username=postgres
-spring.datasource.password=${dbSecret}
+spring.datasource.password=1234567890
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create
@@ -12,8 +12,8 @@ spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
 # App Properties
-homekeeper.app.jwtSecret= ${dbSecret}
+homekeeper.app.jwtSecret=1234567890
 homekeeper.app.jwtExpirationMs= 172800000
 # homekeeper.app.jwtExpirationMs= 86400000
-homekeeper.app.secretKey=${secretKey}
-homekeeper.app.remoteAddr=${remoteAddr}
+homekeeper.app.secretKey=1234567890
+homekeeper.app.remoteAddr=0:0:0:0:0:0:0:1
