Tariff_and_payment_is_DINE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5433/homekeeper
 spring.datasource.username=hkuser
 spring.datasource.password=${dbSecret}
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 # spring.datasource.driver-class-name=com.postgresql.jdbc.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
